SERVER-17040: NULL pointer crash in cloneCollectionAsCapped